--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,23 @@
-* { 
+  * { 
     outline: 2px solid red;
+}
+@font-face { 
+    font-family: "MyFont1";
+    src: url("../fonts/Razing.ttf");
 }
 
 body {
+    height: 100vh;
     padding: 0;
     margin: 0;
-    background-color: rgb(144, 119, 60);
+    background-color: rgb(18, 18, 18);
 }
 
 .MainPage {
-    height: 100vh;
     display: grid;
-    grid-template-columns: 1fr; 
-    grid-template-rows: 500px, 500px; 
+    grid-template-columns: 1fr;
+    grid-template-rows: 300px, 1fr;
+    justify-items: center;
 }
 
 .MenuNavHeader {
@@ -22,12 +27,12 @@ body {
 }
 
 .NavMenu { 
-    width: 600px;
+    width: clamp(500px, 50vw, 50vw);
     display: grid; 
     grid-template-columns: 50px, 50px, 50px;
     grid-template-rows: 50px;
     justify-items: center;
-    align-content: end;
+    align-content: center;
     align-items: center;
 }
 
@@ -36,7 +41,11 @@ button[id] {
     height: 50px;
     border-radius: 25px;
     cursor: pointer;
-    border: 1px solid black;
+    border: 2px solid black;
+    box-shadow: 0 10px 10px rgb(0, 0, 0, 0.5);
+    font-family: MyFont1;
+    font-size: 18px;
+    background-color: rgb(255, 255, 255);
 }
 
 #HomeButton { 
@@ -49,4 +58,48 @@ button[id] {
 
 #AboutButton { 
     grid-column: 3;
+}
+
+button[id]:hover { 
+    background-color: rgb(101, 101, 101);
+}
+
+button[id]:focus { 
+    background-color: black;
+    border: 2px solid white;
+    color: white;
+}
+
+.ContentSection { 
+    grid-row: 2;
+    background-color:rgb(255, 255, 255);
+    box-shadow: 0 10px 10px rgb(0, 0, 0, 0.5);
+    height: clamp(500px, 85vh, 100vh);
+    width: clamp(500px, 85vw, 100vw);
+}
+
+.HomeDiv { 
+    display: grid;
+    background-color:rgb(124, 124, 124);
+    color: black;
+    height: clamp(500px, 85vh, 100vh);
+    width: clamp(250px, 85vw, 100vw);
+}
+
+#HomeHeader {
+    text-shadow: 
+    -2px -2px 0 black, 
+    2px -2px 0 black,
+    -2px 2px 0 black,
+    2px 2px 0 black;
+    color: white;
+    font-size: 82px;
+    width: 250px;
+    height: 100px;
+
+}
+
+#HomeBurgerImage {
+    width: 200px;
+    height: 50px;
 }
