--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
-  * { 
+ * { 
     outline: 2px solid red;
 }
 @font-face { 
-    font-family: "MyFont1";
+    font-family: "MainFont";
     src: url("../fonts/Razing.ttf");
 }
 
@@ -10,7 +10,7 @@ body {
     height: 100vh;
     padding: 0;
     margin: 0;
-    background-color: rgb(18, 18, 18);
+    background-color: rgb(0, 0, 0);
 }
 
 .MainPage {
@@ -22,12 +22,15 @@ body {
 
 .MenuNavHeader {
     height: 100px;
+    width: 100vw;
     display: grid;
     justify-items: center;
-}
+    background-color: white;
+    border-bottom: 4px solid rgb(0, 0, 0);
+} 
 
 .NavMenu { 
-    width: clamp(500px, 50vw, 50vw);
+    width: clamp(500px, 40vw, 40vw);
     display: grid; 
     grid-template-columns: 50px, 50px, 50px;
     grid-template-rows: 50px;
@@ -42,8 +45,8 @@ button[id] {
     border-radius: 25px;
     cursor: pointer;
     border: 2px solid black;
-    box-shadow: 0 10px 10px rgb(0, 0, 0, 0.5);
-    font-family: MyFont1;
+    box-shadow: 0 5px 5px rgb(0, 0, 0, 0.5);
+    font-family: MainFont;
     font-size: 18px;
     background-color: rgb(255, 255, 255);
 }
@@ -56,7 +59,7 @@ button[id] {
     grid-column: 2;
 }
 
-#AboutButton { 
+#ContactButton { 
     grid-column: 3;
 }
 
@@ -64,42 +67,64 @@ button[id]:hover {
     background-color: rgb(101, 101, 101);
 }
 
-button[id]:focus { 
-    background-color: black;
-    border: 2px solid white;
-    color: white;
+.ActiveButton { 
+    border: 2px solid rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
 
 .ContentSection { 
     grid-row: 2;
-    background-color:rgb(255, 255, 255);
-    box-shadow: 0 10px 10px rgb(0, 0, 0, 0.5);
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: minmax(500px, 1fr);
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
     height: clamp(500px, 85vh, 100vh);
     width: clamp(500px, 85vw, 100vw);
 }
 
+
+
+
+
+
+/* Custom Made classes for appended elements */
+
 .HomeDiv { 
     display: grid;
-    background-color:rgb(124, 124, 124);
+    grid-template-rows: 200px 1fr;
+    grid-template-columns: 1fr;
+    justify-items: center;
     color: black;
     height: clamp(500px, 85vh, 100vh);
-    width: clamp(250px, 85vw, 100vw);
+    width: clamp(500px, 85vw, 100vw);
+}
+
+.HeaderDiv { 
+    width: 500px;
+    height: 130px;
+    display: grid;
+    grid-template-rows: 100px 30px;
+    align-items: center;
 }
 
 #HomeHeader {
-    text-shadow: 
-    -2px -2px 0 black, 
-    2px -2px 0 black,
-    -2px 2px 0 black,
-    2px 2px 0 black;
-    color: white;
-    font-size: 82px;
-    width: 250px;
-    height: 100px;
-
+    font-family: MainFont;
+    text-align: center;
+    justify-self: center;
+    color: rgb(0, 0, 0);
+    font-size: 92px;
+    width: 300px;
+    height: 90px;
 }
 
-#HomeBurgerImage {
+#HomeMiniHeader { 
+    font-family: MainFont;
+    text-align: center;
+    justify-self: center;
+    color: rgb(0, 0, 0);
+    font-size: 24px;
     width: 200px;
-    height: 50px;
+    height: 30px;
 }
+
