Got the boxes to auto fit!

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
- * { 
+  *{ 
     outline: 2px solid red;
 }
 @font-face { 
@@ -7,7 +7,7 @@
 }
 
 body {
-    height: 100vh;
+    height: auto;
     padding: 0;
     margin: 0;
     background-color: rgb(0, 0, 0);
@@ -76,15 +76,11 @@ button[id]:hover {
 
 .ContentSection { 
     grid-row: 2;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(auto-fit, minmax(500px, 1fr));
     background-color: rgb(0, 0, 0);
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
     justify-items: center;
-    align-content: center;
-    height: max(85vh);
-    width: max(80vw);
+    height: auto;
+    width: auto;
 }
 
 
@@ -96,32 +92,28 @@ button[id]:hover {
 
 .HomeDiv { 
     display: grid;
-    grid-template-rows: repeat(auto-fit, 300px);
+    grid-template-rows: auto 1fr;
     grid-template-columns: 1fr;
-    justify-content: center;
     justify-items: center;
-    align-content: center;
+    align-items: center;
     color: rgb(0, 0, 0);
-    height: max(85vh);
-    width: max(80vw);
+    height: auto;
+    width: 100vw;
+    gap: 15px;
 }
 
 .HeaderDiv { 
-    width: 400px;
-    height: 130px;
     display: grid;
     grid-template-rows: 100px 30px;
+    justify-items: center;
     align-items: center;
 }
 
 #HomeHeader {
     font-family: MainFont;
     text-align: center;
-    justify-self: center;
     color: rgb(255, 255, 255);
-    font-size: 92px;
-    width: 300px;
-    height: 90px;
+    font-size: 100px;
 }
 
 #HomeMiniHeader { 
@@ -134,6 +126,23 @@ button[id]:hover {
     height: 30px;
 }
 
+/* Restaurant Div setting for repeating columns */
+.RestaurantDivs {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 400px);
+    grid-template-rows: 1fr;
+    column-gap: 60px;
+    row-gap: 20px;
+    color: rgb(0, 0, 0);
+    justify-content: center;
+    justify-items: center;
+    width: 95vw;
+    height: auto;
+}
+
+
+
+
 /*About the Restaurant + Styles*/
 
 .AboutDiv { 
@@ -143,8 +152,8 @@ button[id]:hover {
     justify-items: center;
     border-radius: 40px;
     background-color: rgb(255, 255, 255);
-    height: max(200px, 40vh);
-    width: max(400px, 60vw);
+    height: max(300px, 20vh);
+    width: max(450px, 30vw);
 }
 
 
@@ -157,10 +166,21 @@ button[id]:hover {
     justify-items: center;
     border-radius: 40px;
     background-color: rgb(255, 255, 255);
-    height: max(200px, 40vh);
-    width: max(400px, 60vw);
+    height: max(300px, 20vh);
+    width: max(450px, 30vw);
 }
 
 
 
 /* Restaurant Location + Styles */
+
+.LocationDiv {
+    display: grid;
+    grid-template-rows: 200px 1fr;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    border-radius: 40px;
+    background-color: rgb(255, 255, 255);
+    height: max(300px, 20vh);
+    width: max(450px, 30vw);
+}
