--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-  *{ 
+  * { 
     outline: 2px solid red;
 }
 @font-face { 
@@ -15,9 +15,10 @@ body {
 
 .MainPage {
     display: grid;
-    grid-template-columns: minmax(400px, 1fr);
+    grid-template-columns: minmax(500px, 1fr);
     grid-template-rows: 300px, 1fr;
     justify-items: center;
+    align-content: center;
 }
 
 .MenuNavHeader {
@@ -25,14 +26,14 @@ body {
     width: max(500px, 50vw);
     display: grid;
     justify-items: center;
-    border-bottom-left-radius: 40px;
-    border-bottom-right-radius: 40px;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
     background-color: rgb(255, 255, 255);
     border-bottom: 4px solid rgb(0, 0, 0);
 } 
 
 .NavMenu { 
-    width: max(500px, 50vw);
+    width: 500px;
     display: grid; 
     grid-template-columns: 50px, 50px, 50px;
     grid-template-rows: 50px;
@@ -78,13 +79,9 @@ button[id]:hover {
     grid-row: 2;
     background-color: rgb(0, 0, 0);
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
-    justify-items: center;
-    height: auto;
-    width: auto;
+    place-items: center;
+    place-content: center;
 }
-
-
-
 
 
 
@@ -92,19 +89,18 @@ button[id]:hover {
 
 .HomeDiv { 
     display: grid;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: 200px 1fr;
     grid-template-columns: 1fr;
     justify-items: center;
     align-items: center;
     color: rgb(0, 0, 0);
-    height: auto;
-    width: 100vw;
-    gap: 15px;
 }
 
 .HeaderDiv { 
+    height: 160px;
+    width: 300px;
     display: grid;
-    grid-template-rows: 100px 30px;
+    grid-template-rows: 120px 30px;
     justify-items: center;
     align-items: center;
 }
@@ -122,22 +118,19 @@ button[id]:hover {
     justify-self: center;
     color: rgb(255, 255, 255);
     font-size: 24px;
-    width: 200px;
-    height: 30px;
 }
 
 /* Restaurant Div setting for repeating columns */
 .RestaurantDivs {
     display: grid;
-    grid-template-columns: repeat(auto-fit, 400px);
+    grid-template-columns: repeat(auto-fit, 600px);
     grid-template-rows: 1fr;
-    column-gap: 60px;
-    row-gap: 20px;
+    column-gap: 110px;
+    row-gap: 10px;
     color: rgb(0, 0, 0);
-    justify-content: center;
     justify-items: center;
-    width: 95vw;
-    height: auto;
+    justify-content: center;
+    width: max(90vw, 500px);
 }
 
 
@@ -149,11 +142,10 @@ button[id]:hover {
     display: grid;
     grid-template-rows: 200px 1fr;
     grid-template-columns: 1fr;
-    justify-items: center;
     border-radius: 40px;
     background-color: rgb(255, 255, 255);
-    height: max(300px, 20vh);
-    width: max(450px, 30vw);
+    height: max(400px, 20vh);
+    width: max(500px, 40vw);
 }
 
 
@@ -163,11 +155,10 @@ button[id]:hover {
     display: grid;
     grid-template-rows: 200px 1fr;
     grid-template-columns: 1fr;
-    justify-items: center;
     border-radius: 40px;
     background-color: rgb(255, 255, 255);
-    height: max(300px, 20vh);
-    width: max(450px, 30vw);
+    height: max(400px, 20vh);
+    width: max(500px, 40vw);
 }
 
 
@@ -178,9 +169,8 @@ button[id]:hover {
     display: grid;
     grid-template-rows: 200px 1fr;
     grid-template-columns: 1fr;
-    justify-items: center;
     border-radius: 40px;
     background-color: rgb(255, 255, 255);
-    height: max(300px, 20vh);
-    width: max(450px, 30vw);
+    height: max(400px, 20vh);
+    width: max(500px, 40vw);
 }
