--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 
-  *{ 
+ *  { 
     outline: 2px solid red;
 }
 @font-face { 
@@ -198,6 +198,7 @@ button[id]:hover {
     font-family: MainFont;
 }
 
+/* For both the menus */
 .Menus { 
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 600px));
@@ -208,7 +209,9 @@ button[id]:hover {
     width: max(600px, 85vw);
 }
 
-.LunchMenuDiv { 
+
+/* Lunch Menu boxes + styles */
+.AllDayMenuDiv { 
     display: grid;
     background-color: white;
     border-radius: 30px;
@@ -216,7 +219,28 @@ button[id]:hover {
     height: max(450px, 80vh);
 }
 
-.DinnerMenuDiv { 
+.AllDayMenuBox , .BeveragesMenuBox { 
+    width: auto;
+    height: auto;
+    margin: 15px;
+    background-color: black;
+    color: white;
+    border-radius: 30px;
+    display: grid;
+    grid-template-columns: 1fr; 
+    grid-template-rows: repeat(auto-fit, auto);
+}
+
+#AllDayBoxHeader { 
+    font-size: 42px;
+}
+
+
+
+
+
+/* Dinner Menu boxes + styles */
+.BeveragesMenuDiv { 
     display: grid;
     background-color: white;
     border-radius: 30px;
@@ -284,7 +308,7 @@ button[id]:hover {
     padding: 15px;
     display: grid;
     grid-template-columns: auto; 
-    grid-template-rows: repeat(auto-fit, 60px);
+    grid-template-rows: repeat(auto-fit, 50px);
     justify-items: start;
     align-items: start;
 }
@@ -304,35 +328,70 @@ button[id]:hover {
     border-radius: 30px; 
     margin: 15px;
     padding: 15px;
+    height: auto;
     display: grid;
     grid-template-columns: auto; 
-    grid-template-rows: repeat(5, 60px);
+    grid-template-rows: repeat(auto-fit, 1fr);
     justify-items: start;
     align-items: start;
 }
 
 #OrderHeader { 
-    font-size: 32px;
+    font-size: 36px;
 }
 
-#InstaPara { 
+.InstaTagBox { 
+    padding: 0;
+    width: auto;
     display: grid;
-    grid-template-columns: auto auto;
-    justify-items: center;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 35px 1fr;
+    align-items: center;
+}
+
+#InstaHeader { 
+    grid-column: span 2;
+    margin: 0;
+    font-size: 32px;
+}
+#InstaPara { 
+    grid-column: 2;
+    font-size: 16px;
 }
 
 #InstaLogo { 
     grid-column: 1;
+    grid-row: 2;
     width: 30px;
     height: 30px;
     filter: invert();
 }
 
-#TikTokPara { 
+.TikTokTagBox { 
+    padding: 0;
+    width: auto;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 35px 1fr;
+    align-items: center;
+}
 
+#TikTokHeader { 
+    margin: 0;
+    padding: 0;
+    grid-column: span 2;
+    font-size: 32px;
+}
+
+#TikTokPara { 
+    font-size: 16px;
+    grid-row: 2;
+    grid-column: 2;
 }
 
 #TikTokLogo { 
+    grid-row: 2;
+    grid-column: 1;
     width: 30px;
     height: 30px;
     filter: invert();
