--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@
 
 body {
     height: auto;
+
     padding: 0;
     margin: 0;
     background-color: rgb(0, 0, 0);
@@ -137,15 +138,15 @@ button[id]:hover {
 
 /* Restaurant Div setting for repeating columns */
 .RestaurantDivs {
-    padding: 10px;
+    padding: 5px;
     font-family: MainFont;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
     grid-template-rows: 1fr;
     row-gap: 10px;
-    place-items: center;
-    place-content: center;
-    width: max(600px, 90vw);
+    justify-items: center;
+    justify-content: center;
+    width: max(500px, 80vw);
 }
 
 /*About the Restaurant + Styles*/
@@ -158,60 +159,99 @@ button[id]:hover {
 }
 
 .DivForAbout { 
+    width: auto;
+    height: auto;
     margin: 15px;
     font-family: MainFont;
     background-color: black;
     color: white;
     border-radius: 30px;
     display: grid;
-    grid-template-columns: 1fr 1fr; 
-    grid-template-rows: 1fr;
-    width: auto;
-    height: auto;
+    grid-template-columns: repeat(2, minmax(200px, auto)); 
+    grid-template-rows: auto;
+    justify-content: center;
+    align-items: center;
 }
 
 #InfoDiv-Image {
     object-fit: cover;
     object-position: -150px;
-    width: 200px;
-    height: 450px;
+    width: max(215px);
+    height: max(450px, 10vh);
     margin: 10px;
     border-radius: 30px;
 }
 
 .AboutParagraphDiv { 
-    margin: 10px;
     width: auto;
     height: auto;
+    margin: 10px;
     display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 250px;
+    grid-template-columns: 1fr; 
+    grid-template-rows: 80px 1fr;
     justify-items: start;
 }
 
 #AboutParagraphHeader { 
-    font-size: 32px;
-    text-align: center;
+    height: 50px;
+    font-size: 42px;
     color: white;
+    text-align: center;
 }
 
 #InfoDiv-Paragraph {
-    white-space: pre;
+    line-height: 20px;
     width: auto;
-    height: auto;
+    align-self: start;
+    text-align: start;
 }
 
 
 /* Restaurant Hours + Styles */
 .HoursDiv { 
     display: grid;
-    grid-template-rows: 200px 1fr;
-    grid-template-columns: 1fr;
     border-radius: 40px;
     background-color: rgb(255, 255, 255);
     height: max(500px, 20vh);
     width: max(500px, 40vw);
+    width: max-content;
+    height: max-content;
 }
+
+.ChildHoursDiv { 
+    width: auto;
+    height: auto;
+    width: max-content;
+    height: max-content;
+    margin: 15px;
+    padding: 10px;
+    font-family: MainFont;
+    background-color: black;
+    color: white;
+    border-radius: 30px;
+    display: grid;
+    grid-template-columns: 1fr; 
+    grid-template-rows: 100px 200px;
+    justify-content: center;
+    justify-items: center;
+    align-content: center;
+}
+
+#ChildDivHeader { 
+    font-size: 42px;
+    height: 50px;
+}
+
+#ChildDivParagraph { 
+    white-space: pre;
+    text-align: start;
+    width: 400px;
+    height: 200px;
+    font-size: 26px;
+}
+
+
+
 
 /* Restaurant Location + Styles */
 .LocationDiv {
